tests/typing/good/testfile-bounds-3.scala

class C { def m[T >: Null]() { var x : T = null } }
object Main { def main(args: Array[String]) { } }
