tests/typing/bad/testfile-and2-1.scala
class A { def m() { var x: Boolean = true || null } }
object Main { def main(args: Array[String]) { } }
